# self-balancing-robot-with-computer-vision

./: CMakeLists.txt  README.md  package.xml
launch/: balance_controller.py  balancer_sim.launch.py  balancer_world.world  keyboard_teleop.py  lqr_controller.py
meshes/: base_plate.stl  bracket_arm.stl  main_frame.stl  shelf_panel_a.stl  shelf_panel_b.stl  side_panel.stl  wheel_left.stl  wheel_right.stl
rviz/: balancer.rviz
smart_robot_ai/: CHANGES_SUMMARY.md  QUICK_REFERENCE.md  ROBUSTNESS_IMPROVEMENTS.md  collector.py  export_tflite.py  realtime_test.py  train_model.py
smart_robot_ai/model/: labels  smart_robot_model.onnx  smart_robot_model.tflite
urdf/: balancer_robot.xacro  base.xacro  common.xacro  gazebo.xacro  macros.xacro  materials.xacro  sensors.xacro  wheels.xacro
